# typdiv-sampling

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TODO  example.ipynb  experiment.py  intrinsic-eval.sh  main.py  mode-eval.sh  prepare-data.sh  preprocess.py  pyproject.toml  requirements.txt  sampling.py  tokenizer-eval-single.sh  tokenizer-eval.sh  typ_dist.py
analysis/: algo-vis.ipynb  sampling_2dvis.py  tokenization-analysis.ipynb  typ-data-analysis.ipynb
analysis/eval-frame-intersection/: frame_intersection.py  gb_lang_dists-bnrc75-intframe.csv  intersection-frame.txt  intrinsic-eval-intframe.csv  intrinsic-eval-intframe.sh
data/: avg_subwords_mBERT.csv  compute_all_distances.py  feature_subset_example.txt  gb_lang_feat_vals.csv  normal_2000_loc1_scale10.npy  prepare_grambank.py  wals_dedup.csv
data/convenience/: convenience_counts.json
data/frames/: equal_lang_frame.txt  gb_frame-bnrc75.txt  langs_gb.txt  tokenizer_frame.txt
evaluation/: experiment.py  intrinsic-eval.sh  main.py  plot.ipynb  plot.py  sampling_2dvis.py  table.ipynb  typ-data-analysis.ipynb  typdiv_eval.py
evaluation/experiments/: 11-lang-comparison.csv  experiment-100-deduped.csv  experiment-5-500-5-both-metrics.csv  experiment-gb-500.csv  only-k-20-eval.csv  tokenizer-eval-equal-lang.csv  tokenizer-eval.csv  typ-eval-res.csv
evaluation/plots/: plot.ipynb  plot.py
evaluation/results/: intrinsic-eval.csv  tokenizer-eval.csv
evaluation/samples/: mdp-langs_gb-10-gb_vec_sim-123.txt  mmdp-langs_gb-20-geo_dists-123.txt  random_family-langs_gb-10-gb_vec_sim_0-123.txt  typ_mdp-langs_gb-10-gb_vec_sim_0-123.txt
evaluation/tables/: table.ipynb  table.tex
src/typdiv_sampling/: __init__.py  cli.py  constants.py  distance.py  evaluation.py  sampling.py
tests/: test_sampler.py
tests/fixtures/: fake_counts.json  fake_dists.csv  fake_gb.csv  fake_wals.csv  gb_frame_100.txt
typ_eval/: plot.ipynb  plot.py  table.ipynb
typ_eval/experiments/: experiment-195.csv  only-11.csv
typ_eval/samples/: random_genus-langs_gb-10-gb_vec_sim_0-123.txt  typ_mmdp-langs_gb-10-gb_vec_sim_0-123.txt
typdiv/: measures.py  sampling.py  typ_dist.py
use_cases/custom_features/: example.py  example_distances.csv  example_features.csv  example_results.csv
use_cases/dataset_expansion/: next-best.ipynb
use_cases/dataset_expansion/lang_codes/: aya_eval-human.csv  flores200.csv  tydiqa.csv  ud_214.csv  ud_extensions.csv  xcopa.csv
use_cases/geo_dist/: compute_geo_dists.py  visualize-dist.ipynb
use_cases/tokenization/: get_num_subwords.py  get_tok_model_subwords.sh  visualizations.ipynb
use_cases/tokenization/data/: bib_per_lang.json  gb_lang_dists-bnrc75-tok.csv  gb_processed_tok.csv  lang_matching.ipynb  langcodes_Latn.txt  langs_tok.txt  prepare_verses.py
(+4 files in other folders)
